2007-07-06  Michael Stucki  <michael@typo3.org>

	* Fix in indexed search: List of indexed pages could be broken if mutli-byte chars are cut in the middle (patch by Karsten Dambekalns)

2007-07-02  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4623: Content encoding with x-gzip not possible in IE7
	* Fixed bug #5789: JS error in new content element wizard with a single item

2007-06-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Added $GLOBALS['TYPO3_DB']->sql_free_result() to TCEmain::rawCopyPageContent() to avoid resource waste

2007-06-13  Andreas Otto <andreas.otto@dkd.de>

	* Added status headers: In class.tslib_fe.php status header were set when an error occurs after which TYPO3 throws an exit() statement. In addition to that t3lib_div::syslog() is called to write an entry to the syslog.

2007-06-13  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5778: Missleading comment in TCEmain::copyRecord_procBasedOnFieldType()

2007-06-08  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5755: XCLASS inclusion part for class.t3lib_tceforms_inline.php is missing

2007-06-05  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4226: New content elements wizard removes CE from array if tt_content_defValues property is zero

2007-05-25  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5655: TYPO3 back-end was blocked on new installations because of a bug in RFCs #1642/#4886

2007-05-23  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5564: IRRE - foreign_selector/foreign_unique on click issue

2007-05-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug 5550: 'lower' TCA specification may fail with non-ascii characters
	* Added $GLOBALS['TYPO3_DB']->sql_free_result() to TCEmain::recordInfo() to avoid resource waste

2007-05-18  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5645: Missing Slovenian flag
	* Fixed bug #5628: Missing Slovak flag
	* Fixed bug #5578: config setting SYS[requestURIvar] doesn't work